--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "msw": "^0.47.4",
     "netlify-cli": "^12.0.11",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
